Agregue normalize.css a mi portafolio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8"/>
 	<title>Miguel Mejias - Portafolio</title>
 	<meta description="Este es el portafolio de Miguel Mejias, Ingeniero de Sistemas - Diseñador Web."/>
+	<link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
 	<!-- Mi cabezera: para un logo, mi nombre, etc relevante-->
