Arreglado el meta description, lo escribi mal XD era meta name=description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Miguel Mejias - Portafolio</title>
-	<meta description="Este es el portafolio de Miguel Mejias, Ingeniero de Sistemas - Diseñador Web."/>
+	<meta name="description" content="Este es el portafolio de Miguel Mejias, Ingeniero de Sistemas - Diseñador Web."/>
 	<link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
