Dandole forma al portafolio de prueba

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Miguel Mejias - Portafolio</title>
 	<meta name="description" content="Este es el portafolio de Miguel Mejias, Ingeniero de Sistemas - Diseñador Web."/>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<!-- Mi cabezera: para un logo, mi nombre, etc relevante-->
